syntax = "proto3";
package protobuf;
option go_package = "pb/protobuf";

message Msg {
  bytes messageID = 1;
  bytes payload = 2;
  fixed64 checkSum = 3;
}